# aoc-2023

./: Cargo.toml  README.md
aoc/: Cargo.toml
aoc/inputs/: day10b_example.txt
aoc/src/: main.rs  utils.rs
aoc/src/commands/: day0.rs  day10a.rs  day10b.rs  day11a.rs  day11b.rs  day16a.rs  day16b.rs  day1a.rs  day1b.rs  day2a.rs  day2b.rs  day3a.rs  day3b.rs  day4a.rs  day4b.rs  day5a.rs  day5b.rs  day6a.rs  day6b.rs  day7a.rs  day7b.rs  day8a.rs  day8b.rs  day9a.rs  day9b.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
