[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
enum_dispatch = "0.3.8"
itertools = "0.12.0"
ordered-float = "4.2.0"
rayon = "1.8.0"

[dev-dependencies]
rstest = "0.18.2"
